sjengida/g3/nk_attacked
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/attacks.c:771:7: error: use of undeclared identifier 'bishop_o_7'
v17 = bishop_o_7[v3]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/attacks.c:828:17: error: use of undeclared identifier 'rook_o_8'
v21 = ( void **)rook_o_8; 
                ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/attacks.c:873:9: error: use of undeclared identifier 'jpt_403A6C'
while ( jpt_403A6C != v21 ); 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/attacks.c:880:6: error: use of undeclared identifier 'bishop_o_7'
v4 = bishop_o_7[v3]; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/attacks.c:939:16: error: use of undeclared identifier 'rook_o_8'
v9 = ( void **)rook_o_8; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/attacks.c:984:15: error: use of undeclared identifier 'jpt_403A6C'
while ( v9 != jpt_403A6C ); 
              ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/nk_attacked/src/obj/attacks.o] Error 1
